--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "novamaterial-enterprise",
+  "name": "Top Life Science",
   "private": true,
   "version": "0.0.0",
   "type": "module",
