--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -22,7 +22,14 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Build
+    # CI 环境变量防止 npm 进入交互模式
+    - name: Install dependencies
       run: |
-        npm install
+        export CI=true
+        npm ci
+        npm install -D webpack-cli
+
+    - name: Build with Webpack
+      run: |
+        export CI=true
         npx webpack
